--- a/public/admin.html
+++ b/public/admin.html
@@ -9,7 +9,6 @@
     --bg1:#4b0082; --bg2:#000000; --particle:#c7b3ff;
     --card:#1c1433f0; --edge1:rgba(174,143,255,.16); --edge2:rgba(255,255,255,.55);
     --text:#ffffff; --muted:#c9c0f2; --btn-bg:#1e1935; --neonA:#b985ff; --neonB:#efe6ff;
-    --pulse:#7f5cff;
   }
   html,body{height:100%;margin:0;color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;background: radial-gradient(circle at 30% -10%, var(--bg1), var(--bg2));overflow:auto;}
   canvas{position:fixed;inset:0;width:100%;height:100%;z-index:0}
@@ -17,68 +16,43 @@
   .logo-wrap{display:flex;justify-content:center;position:relative;z-index:2}
   .logo{width:240px;display:block;filter:drop-shadow(0 6px 18px rgba(115,90,255,.35));margin:10px auto -36px;}
 
-  .card, .card-mini{
-    position:relative;z-index:1;margin:0 auto;
-    background:linear-gradient(var(--card),var(--card)) padding-box,linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
-    border:1px solid transparent;border-radius:20px;box-shadow:0 12px 40px rgba(0,0,0,.45);
-  }
+  .card{position:relative;z-index:1;margin:0 auto;background:linear-gradient(var(--card),var(--card)) padding-box,linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;border:1px solid transparent;border-radius:20px;box-shadow:0 12px 40px rgba(0,0,0,.45);}
   .card-inner{padding:16px 14px}
-  .mini-inner{padding:14px 14px}
 
   h1{margin:2px 0 8px;text-align:center;font-size:24px;letter-spacing:.4px}
-  p,small{color:var(--muted);text-align:center;margin:0}
-
   .row{display:flex;gap:8px;margin:8px 0}
-  input[type=text], input[type=number]{
-    flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.35);
-    border-radius:12px;padding:10px 12px;color:#fff;outline:none
-  }
+  input[type=text], input[type=number]{flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.35);border-radius:12px;padding:10px 12px;color:#fff;outline:none}
   input::placeholder{color:#9a8ccc}
 
-  .btn{
-    position:relative;border:none;border-radius:12px;padding:10px 12px;color:#fff;cursor:pointer;outline:none;background:var(--btn-bg);
-    white-space:nowrap;font-weight:600;letter-spacing:.2px;text-align:center;box-shadow:0 6px 18px rgba(40,0,120,.22);z-index:0;
-  }
-  .btn:hover{filter:brightness(1.08)}
-  .btn > *{position:relative;z-index:2}
-  .btn::before{content:""; position:absolute; inset:0; border-radius:12px; z-index:1; background:transparent;}
-  .btn--thin{ box-shadow:0 6px 16px rgba(40,0,120,.18); }
-  .btn--thin::before{
-    inset:-1px; border-radius:13px;
-    background:conic-gradient(from 45deg, var(--neonA) 0%, var(--neonB) 18%, var(--neonA) 36%, var(--neonA) 100%);
-    -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0); -webkit-mask-composite:xor; mask-composite:exclude;
-    padding:1px; filter:saturate(90%) blur(.15px) opacity(.85);
-  }
-  .btn--bold{ box-shadow:0 8px 26px rgba(100,50,180,.32); }
-  .btn--bold::before{
-    inset:-2px; border-radius:14px;
-    background:conic-gradient(from 30deg, var(--neonA) 0%, var(--neonB) 14%, var(--neonA) 28%, var(--neonA) 100%);
-    -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0); -webkit-mask-composite:xor; mask-composite:exclude;
-    padding:2px; filter:saturate(120%) blur(.35px) opacity(.95);
-  }
-  .btn--sm{ padding:7px 9px; font-size:12px; min-width:108px }
-  #btnRot.btn--sm{ min-width:102px; font-size:11.8px; padding:7px 8px }
+  .btn{position:relative;border:none;border-radius:12px;padding:10px 12px;color:#fff;cursor:pointer;outline:none;background:var(--btn-bg);white-space:nowrap;font-weight:600;letter-spacing:.2px;text-align:center;box-shadow:0 6px 18px rgba(40,0,120,.22);z-index:0;}
+  .btn::before{content:"";position:absolute;inset:0;border-radius:12px;z-index:1}
+  .btn--thin::before{inset:-1px;border-radius:13px;background:conic-gradient(from 45deg, var(--neonA) 0%, var(--neonB) 18%, var(--neonA) 36%, var(--neonA) 100%);-webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);-webkit-mask-composite:xor;mask-composite:exclude;padding:1px;filter:saturate(90%) blur(.15px) opacity(.85)}
+  .btn--sm{padding:7px 9px;font-size:12px;min-width:108px}
+  .actions-top{display:flex;gap:6px;margin:8px 0 6px;justify-content:space-between}
+  .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;position:relative}
+  .btn--main{font-size:15px;padding:12px 16px;min-width:220px;box-shadow:0 10px 28px rgba(127,92,255,.35),0 0 22px rgba(127,92,255,.22)}
+  .btn--main::after{content:"";position:absolute;z-index:0;inset:-16px;border-radius:28px;background: radial-gradient(45% 70% at 50% 50%, rgba(127,92,255,.55), rgba(127,92,255,.22) 55%, transparent 75%);filter:blur(16px);animation:breath 2.8s ease-in-out infinite}
+  @keyframes breath{0%,100%{transform:scale(.96);opacity:.85}50%{transform:scale(1.06);opacity:1}}
 
-  .actions-top{display:flex; gap:6px; margin:8px 0 6px; justify-content:space-between; flex-wrap:nowrap;}
-  .actions-bottom{display:flex; justify-content:center; margin:18px 0 6px; position:relative;}
-  .btn--main{font-size:15px; padding:12px 16px; min-width:220px; box-shadow:0 10px 28px rgba(127,92,255,.35), 0 0 22px rgba(127,92,255,.22);}
-  .btn--main::after{content:""; position:absolute; z-index:0; inset:-16px; border-radius:28px; background: radial-gradient(45% 70% at 50% 50%, rgba(127,92,255,.55), rgba(127,92,255,.22) 55%, transparent 75%); filter:blur(16px); animation:breath 2.8s ease-in-out infinite;}
-  @keyframes breath{0%,100%{ transform:scale(0.96); opacity:.85;} 50%{ transform:scale(1.06); opacity:1;}}
-
-  /* Lista de filas (Nombre + URL + Borrar) */
-  #list{ margin-top: 24px; }
+  #list{margin-top:24px}
   .item{display:flex;gap:8px;margin:6px 0;flex-wrap:wrap}
   .item input.name{flex:0 1 160px;min-width:140px}
   .item input.url{flex:1 1 300px;min-width:220px}
-  .item .btn{min-width:auto;padding:10px 12px}
-
-  #msg.ok{color:#90f0b0} #msg.err{color:#fca5a5}
+  .item .btn{min-width:auto}
 
   .save-wrap{display:flex;justify-content:center;margin:16px 0 6px}
-  #btnSaveFinal{ min-width:180px; }
+  #msg{margin:6px 0 0;text-align:center}
+  #msg.ok{color:#90f0b0} #msg.err{color:#fca5a5}
 
-  .card-mini{margin-top:16px}
+  /* Tarjeta config */
+  .card-mini{margin-top:12px}
+  .mini-inner{padding:14px;border:1px solid transparent;border-radius:20px;background:linear-gradient(var(--card),var(--card)) padding-box,linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;box-shadow:0 12px 40px rgba(0,0,0,.45)}
   .mini-title{margin:0 0 8px;text-align:center;font-size:14px;color:#dcd2ff}
+
+  /* Botón "Estadísticas" estilo tarjeta */
+  .stats-card{margin:14px auto 0;cursor:pointer;display:flex;align-items:center;justify-content:center;gap:10px;height:60px;border-radius:20px;border:1px solid transparent;background:linear-gradient(var(--card),var(--card)) padding-box,linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;box-shadow:0 12px 40px rgba(0,0,0,.45)}
+  .stats-card svg{width:20px;height:20px}
+  .stats-card span{font-weight:700;letter-spacing:.3px}
 
   @media (max-width:420px){
     .logo{width:216px;margin:8px auto -38px}
@@ -86,7 +60,6 @@
     .mini-inner{padding:12px 10px}
     .btn{font-size:12.5px}
     .btn--sm{min-width:106px;padding:7px 8px}
-    #btnRot.btn--sm{min-width:100px;font-size:11.6px;padding:7px 7px}
     .btn--main{min-width:210px}
   }
 </style>
@@ -110,10 +83,11 @@
       </div>
 
       <div class="actions-bottom">
-        <button class="btn btn--bold btn--main" id="btnAdd">AGREGAR CAJERA</button>
+        <button class="btn btn--thin btn--main" id="btnAdd">AGREGAR CAJERA</button>
       </div>
 
       <div id="list"></div>
+
       <div class="save-wrap">
         <button class="btn btn--thin" id="btnSaveFinal">Guardar</button>
       </div>
@@ -121,18 +95,23 @@
     </div>
   </div>
 
-  <!-- Tarjeta mini inferior: BLOCK_SIZE + TOKEN -->
+  <!-- Botón / Tarjeta "Estadísticas" -->
+  <div class="stats-card" id="btnStats" title="Estadísticas">
+    <!-- ícono diagrama sectorial -->
+    <svg viewBox="0 0 24 24" fill="none"><path d="M12 2v10l7.07 7.07A10 10 0 1 1 12 2z" stroke="#c7b3ff" stroke-width="1.5"/><path d="M14 2.3A10 10 0 0 1 21.7 10H14V2.3z" fill="#c7b3ff"/></svg>
+    <span>Estadísticas</span>
+  </div>
+
+  <!-- Config -->
   <div class="card-mini">
     <div class="mini-inner">
       <p class="mini-title">Configuración</p>
-
       <div class="row">
         <label for="blocksize" style="align-self:center;min-width:110px;color:#d7ccff;">Rotar cada</label>
         <input id="blocksize" type="number" min="1" max="20" step="1" placeholder="2" style="max-width:120px">
         <label style="align-self:center;color:#d7ccff;min-width:60px">clicks</label>
         <button class="btn btn--thin btn--sm" id="btnSaveBS">Guardar</button>
       </div>
-
       <div class="row">
         <input id="token" type="text" placeholder="tok99-2025">
         <button class="btn btn--thin btn--sm" id="btnSaveToken">Guardar token</button>
@@ -142,137 +121,65 @@
 </div>
 
 <script>
-// ===== Fondo partículas =====
+// Fondo partículas
 const c=document.getElementById("bg"),x=c.getContext("2d");
-let P=[];
-function rs(){c.width=innerWidth;c.height=innerHeight}
+let P=[];function rs(){c.width=innerWidth;c.height=innerHeight}
 addEventListener("resize",rs);rs();
 for(let i=0;i<90;i++)P.push({x:Math.random()*c.width,y:Math.random()*c.height,vx:(Math.random()-.5)*.28,vy:(Math.random()-.5)*.28,r:Math.random()*2+.7});
-(function anim(){
-  const grad=x.createRadialGradient(c.width*0.3, c.height*0.1, 0, c.width*0.3, c.height*0.1, Math.max(c.width,c.height));
-  const cs=(p)=>getComputedStyle(document.documentElement).getPropertyValue(p).trim();
-  grad.addColorStop(0, cs('--bg1')); grad.addColorStop(1, cs('--bg2'));
-  x.fillStyle=grad;x.fillRect(0,0,c.width,c.height);
-  x.fillStyle=cs('--particle');
-  for(const p of P){p.x+=p.vx;p.y+=p.vy; if(p.x<0||p.x>c.width)p.vx*=-1; if(p.y<0||p.y>c.height)p.vy*=-1; x.beginPath();x.arc(p.x,p.y,p.r,0,6.283);x.fill();}
-  requestAnimationFrame(anim);
-})();
+(function anim(){const g=x.createRadialGradient(c.width*.3,c.height*.1,0,c.width*.3,c.height*.1,Math.max(c.width,c.height));const cs=p=>getComputedStyle(document.documentElement).getPropertyValue(p).trim();g.addColorStop(0,cs('--bg1'));g.addColorStop(1,cs('--bg2'));x.fillStyle=g;x.fillRect(0,0,c.width,c.height);x.fillStyle=cs('--particle');for(const p of P){p.x+=p.vx;p.y+=p.vy;if(p.x<0||p.x>c.width)p.vx*=-1;if(p.y<0||p.y>c.height)p.vy*=-1;x.beginPath();x.arc(p.x,p.y,p.r,0,6.283);x.fill()}requestAnimationFrame(anim)})();
 
-// ===== Lógica UI =====
+// UI
 const $=s=>document.querySelector(s);
-const list=$("#list"),msg=$("#msg"),tokenInput=$("#token");
-const bsInput=$("#blocksize");
+const list=$("#list"),msg=$("#msg"),tokenInput=$("#token"),bsInput=$("#blocksize");
 
-function row(obj = { name: "", url: "" }){
-  const d=document.createElement("div");d.className="item";
-
-  const n=document.createElement("input");
-  n.type="text"; n.placeholder="Nombre"; n.value=obj.name||""; n.className="name";
-
-  const u=document.createElement("input");
-  u.type="text"; u.placeholder="https://wa.me/..."; u.value=obj.url||""; u.className="url";
-
-  const b=document.createElement("button");
-  b.className="btn btn--thin btn--sm"; b.textContent="Borrar";
-  b.onclick=()=>d.remove();
-
+function row(obj={name:"",url:""}) {
+  const d=document.createElement("div"); d.className="item";
+  const n=document.createElement("input"); n.type="text"; n.placeholder="Nombre"; n.value=obj.name||""; n.className="name";
+  const u=document.createElement("input"); u.type="text"; u.placeholder="https://wa.me/..."; u.value=obj.url||""; u.className="url";
+  const b=document.createElement("button"); b.className="btn btn--thin btn--sm"; b.textContent="Borrar"; b.onclick=()=>d.remove();
   d.append(n,u,b); list.append(d);
-  setTimeout(()=>{ u.scrollIntoView({behavior:"smooth", block:"end"}); u.focus(); }, 50);
 }
 
 function values(){
-  return [...list.querySelectorAll(".item")]
-    .map(d=>{
-      const name=d.querySelector(".name")?.value.trim()||"";
-      const url=d.querySelector(".url")?.value.trim()||"";
-      return url?{name,url}:null;
-    })
-    .filter(Boolean);
+  return [...list.querySelectorAll(".item")].map(d=>{
+    const name=d.querySelector(".name")?.value.trim()||"";
+    const url=d.querySelector(".url")?.value.trim()||"";
+    return url?{name,url}:null;
+  }).filter(Boolean);
 }
-
 function show(t,ok=1){msg.textContent=t;msg.className=ok?"ok":"err"}
 
 $("#btnSaveToken").onclick=()=>{localStorage.setItem("adm_tok",tokenInput.value.trim());show("Token guardado")};
 
-window.onload=async()=>{
-  const t=localStorage.getItem("adm_tok"); if(t) tokenInput.value=t;
-  if(t){ await loadBlockSize(t); }
-};
+window.onload=async()=>{const t=localStorage.getItem("adm_tok");if(t) tokenInput.value=t; if(t){ await loadBlockSize(t);}};
 
 async function loadList(t){
-  try{
-    show("Cargando...");
-    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&get=1`);
-    const j=await r.json();
-    list.innerHTML="";
-    (j.links||[]).forEach(v=>row(v));   // v = {name,url}
-    if((j.links||[]).length===0) row(); // fila vacía
-    show("Lista cargada");
-  }catch(e){ show("Error al cargar",0); }
+  show("Cargando...");
+  const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&get=1`);
+  const j=await r.json();
+  list.innerHTML="";
+  (j.links||[]).forEach(v=>row(v)); // v = {name,url}
+  if((j.links||[]).length===0) row();
+  show("Lista cargada");
 }
 
-$("#btnView").onclick=async()=>{
-  const t=tokenInput.value.trim(); if(!t)return show("Poné token",0);
-  await loadList(t);
-};
-
-$("#btnReset").onclick=async()=>{
-  const t=tokenInput.value.trim(); if(!t)return show("Poné token",0);
-  try{
-    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&reset=1`);
-    const j=await r.json();
-    list.innerHTML=""; row("");
-    show(j.ok?"Lista borrada":"Error",j.ok);
-  }catch(e){ show("Error",0); }
-};
-
-$("#btnRot").onclick=async()=>{
-  const t=tokenInput.value.trim(); if(!t)return show("Poné token",0);
-  try{
-    const r=await fetch(`/api/rotate-reset?token=${encodeURIComponent(t)}`);
-    const j=await r.json();
-    show(j.ok?"Rotación reiniciada":"Error",j.ok);
-  }catch(e){ show("Error",0); }
-};
-
+$("#btnView").onclick=async()=>{const t=tokenInput.value.trim(); if(!t)return show("Poné token",0); await loadList(t);};
+$("#btnReset").onclick=async()=>{const t=tokenInput.value.trim(); if(!t)return show("Poné token",0); const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&reset=1`); const j=await r.json(); list.innerHTML=""; row(""); show(j.ok?"Lista borrada":"Error",j.ok);};
+$("#btnRot").onclick=async()=>{const t=tokenInput.value.trim(); if(!t)return show("Poné token",0); const r=await fetch(`/api/rotate-reset?token=${encodeURIComponent(t)}`); const j=await r.json(); show(j.ok?"Rotación reiniciada":"Error",j.ok);};
 $("#btnAdd").onclick=()=>row();
-
 $("#btnSaveFinal").onclick=async()=>{
   const t=tokenInput.value.trim(); if(!t)return show("Poné token",0);
   const vals=values(); if(!vals.length)return show("Nada que guardar",0);
-  try{
-    show("Guardando...");
-    const r=await fetch(`/api/admin-post?token=${encodeURIComponent(t)}`,{
-      method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(vals)
-    });
-    const j=await r.json();
-    show(j.ok?`Guardado (${j.saved})`:"Error al guardar",j.ok);
-  }catch(e){ show("Error al guardar",0); }
+  const r=await fetch(`/api/admin-post?token=${encodeURIComponent(t)}`,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(vals)});
+  const j=await r.json(); show(j.ok?`Guardado (${j.saved})`:(j.error||"Error al guardar"), j.ok);
 };
 
-// ===== Block Size =====
-async function loadBlockSize(t){
-  try{
-    const r=await fetch(`/api/blocksize?token=${encodeURIComponent(t)}&get=1`);
-    const j=await r.json();
-    if(j.ok && typeof j.value!=="undefined" && j.value!==null){
-      bsInput.value = j.value;
-    }
-  }catch(e){}
-}
+// Block size
+async function loadBlockSize(t){try{const r=await fetch(`/api/blocksize?token=${encodeURIComponent(t)}&get=1`);const j=await r.json();if(j.ok && j.value!=null) bsInput.value=j.value;}catch{}}
+$("#btnSaveBS").onclick=async()=>{const t=tokenInput.value.trim(); if(!t)return show("Poné token",0); const v=Number(bsInput.value); if(!Number.isInteger(v)||v<1||v>20) return show("Valor inválido (1 a 20)",0); const r=await fetch(`/api/blocksize?token=${encodeURIComponent(t)}`,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({value:v})}); const j=await r.json(); show(j.ok?`Block size guardado (${v})`:"Error al guardar",j.ok);};
 
-$("#btnSaveBS").onclick=async()=>{
-  const t=tokenInput.value.trim(); if(!t)return show("Poné token",0);
-  const v=Number(bsInput.value);
-  if(!Number.isInteger(v) || v<1 || v>20) return show("Valor inválido (1 a 20)",0);
-  try{
-    const r=await fetch(`/api/blocksize?token=${encodeURIComponent(t)}`,{
-      method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({value:v})
-    });
-    const j=await r.json();
-    show(j.ok?`Block size guardado (${v})`:"Error al guardar",j.ok);
-  }catch(e){ show("Error al guardar",0); }
-};
+// Estadísticas (placeholder navegación)
+$("#btnStats").onclick=()=>{alert("Próximo: tablero de Estadísticas (Hoy / Semana / Mes por cajera).")};
 </script>
 </body>
 </html>
